k8s/nextjs-app/3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextjs-food-app
  namespace: food-app
spec:
  selector:
    matchLabels:
      app: nextjs-food-app
  replicas: 1
  template:
    metadata:
      labels:
        app: nextjs-food-app
    spec:
      containers:
        - name: nextjs-food-app
          image: nextjs/food-app:1.0.4
          # image: terraformaksacr.azurecr.io/nextjs/food-app:1.0.4
          resources:
            limits:
              memory: '512Mi'
              cpu: '500m'
          ports:
            - containerPort: 3000
