k8s/nextjs-app/4-food-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: food-app-svc
  namespace: food-app
spec:
  type: ClusterIP
  selector:
    app: nextjs-food-app
  ports:
    - port: 3003
      targetPort: 3000
